# multiagent-systems-with-autogen

./: .gitignore  .run_samples.sh  Citation.cff  README.md  requirements.txt
agentchat/: migration.ipynb  tutorial.ipynb
ch02/: ch2_1_first_agent.ipynb  ch2_2_first_multiagent.ipynb  ch2_agent_groups.ipynb  ch2_first_application.ipynb  ch2_tool_calling.ipynb
ch04/: interface_agents.ipynb  large_action_models.ipynb
ch05/: benchmark_dataset.ipynb  evaluation.ipynb  gaia_dataset.ipynb  workflow.json
ch2/: .gitignore  README.md  ch2_agent_team.ipynb  ch2_first_application.ipynb  ch2_tools_calling.ipynb
course/: generate_meta.py  generate_results.py  requirements.txt
course/notebooks/: tutorial.ipynb
src/: .gitignore
src/interface/: MANIFEST.in  README.md  pyproject.toml
src/interface/interfaceagent/: cli.py  datamodel.py  utils.py
src/interface/interfaceagent/components/memory/: chromadb.py
src/interface/interfaceagent/eval/: worflowmanager.py
src/interface/interfaceagent/eval/games/: __init__.py  datamodel.py  run_tictactoe_match.py
src/interface/interfaceagent/eval/games/agents/: __init__.py  base.py  openai.py  stockfish.py  tictactoe.py
src/interface/interfaceagent/eval/games/games/engines/: __init__.py  base.py  chess.py  tictactoe.py
src/interface/interfaceagent/eval/games/games/match/: base.py  chess.py  tictactoe.py
src/interface/interfaceagent/eval/games/match/: base.py
src/interface/interfaceagent/interface/: __init__.py  browsermanager.py  model.py  planner.py  webbrowser.py
src/interface/interfaceagent/web/: app.py
(+116 files in other folders)
